250810 16:00 장성주 마이페이지 돌봄 진행중

--- a/webapp/app/myPageCare/careMark.html
+++ b/webapp/app/myPageCare/careMark.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Care_Mark</title>
+
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+
   <link rel="stylesheet" href="./../../assets/css/myPageCare/careMark.css">
 </head>
-
 <body>
   <div id="header"></div>
+
   <main>
-
-
     <nav class="main_sidebar">
       <ul>
-        <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
+        <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt=""></a></li>
         <li><a href="./careModify.html">개인정보 수정</a></li>
         <li><a href="./careMark.html">찜한 목록</a></li>
         <li><a href="./careMatching.html">매칭 기록</a></li>
@@ -29,35 +28,92 @@
         <li><a href="./careExit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
+
     <div class="div_mark">
       <div class="title">찜한 목록</div>
-      <nav class="mark_nav">
-        <input type="checkbox">
-        <ul>
-          <li>이름</li>
-          <li>위치</li>
-          <li>전화번호</li>
-        </ul>
 
-      </nav>
-      <nav class="page">
-        <ul>
-          <li>&lt;</li>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>&gt;</li>
-        </ul>
-
-      </nav>
+      <div class="table_wrap">
+        <nav class="mark_nav">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name"><div>이름</div></li>
+            <li class="location"><div>위치</div></li>
+            <li class="phone"><div>전화번호</div></li>
+          </ul>
+        </nav>
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
+              <div>이름</div>
+            </li>
+            <li class="location">
+              <div>위치</div>
+            </li>
+            <li class="phone">
+              <div>전화번호</div>
+            </li>
+          </ul>
+        </nav>
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
+              <div>이름</div>
+            </li>
+            <li class="location">
+              <div>위치</div>
+            </li>
+            <li class="phone">
+              <div>전화번호</div>
+            </li>
+          </ul>
+        </nav>
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
+              <div>이름</div>
+            </li>
+            <li class="location">
+              <div>위치</div>
+            </li>
+            <li class="phone">
+              <div>전화번호</div>
+            </li>
+          </ul>
+        </nav>
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
+              <div>이름</div>
+            </li>
+            <li class="location">
+              <div>위치</div>
+            </li>
+            <li class="phone">
+              <div>전화번호</div>
+            </li>
+          </ul>
+        </nav>
+        
+        <nav class="page">
+          <ul>
+            <li><a href="">&lt;</a></li>
+            <li><a href="">1</a></li>
+            <li><a href="">2</a></li>
+            <li><a href="">3</a></li>
+            <li><a href="">4</a></li>
+            <li><a href="">&gt;</a></li>
+          </ul>
+        </nav>
       <div class="div_delete">
-        <button>찜 삭제</button>
+        <button type="button" class="btn_delete">찜 삭제</button>
       </div>
     </div>
   </main>
+
   <div id="footer"></div>
-
 </body>
-
 </html>
