--- a/webapp/app/myPageCare/careReference.html
+++ b/webapp/app/myPageCare/careReference.html
@@ -15,7 +15,6 @@
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <div></div>
       <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
         <li><a href="./careModify.html">개인정보 수정</a></li>
@@ -59,7 +58,7 @@
 
       </nav>
       <div class="div_delete">
-        <button>등록</button>
+        <a href="./careReferenceDP.html"><button>등록</button></a>
       </div>
     </div>
   </main>
