--- a/webapp/app/myPageCare/careReferenceCheck.html
+++ b/webapp/app/myPageCare/careReferenceCheck.html
@@ -40,7 +40,8 @@
       </section>
 
       <div class="buttons">
-        <button class="btn_list"><a href=""></a>목록</button>
+        <a class="btn_list" href="./careReference.html">목록</a>
+
       </div>
     </section>
   </main>
