--- a/webapp/app/myPageNormal/normalMark.html
+++ b/webapp/app/myPageNormal/normalMark.html
@@ -40,14 +40,11 @@
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
-            <li class="name">
-              <div>이름</div>
+            <li class="name"><a href="./../restaurant/restaurantDetail.html">이름</a>
             </li>
-            <li class="location">
-              <div>위치</div>
+            <li class="location"><a href="./../restaurant/restaurantDetail.html">위치</a>
             </li>
-            <li class="phone">
-              <div>전화번호</div>
+            <li class="phone"><a href="./../restaurant/restaurantDetail.html">전화번호</a>
             </li>
           </ul>
         </nav>
