250810 18:01 모달만드는 중

--- a/webapp/app/myPageNormal/normalPwCheck.html
+++ b/webapp/app/myPageNormal/normalPwCheck.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/myPageNormal/normalPwCheck.js"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -30,7 +31,7 @@
       <form action="" method="get"> 
         비밀번호<input type="password" placeholder="비밀번호 8자리 입력">
         <button>비밀번호 확인</button>
-        <div>일치하지 않는 비밀번호 입니다</div>
+        <div id="pwaccord">일치하지 않는 비밀번호 입니다</div>
       </form>
     </div>
   </main>
