--- a/webapp/app/myPageNormal/normalreseiveMesseage.html
+++ b/webapp/app/myPageNormal/normalreseiveMesseage.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Normal_Messeage</title>
-  <link rel="stylesheet" href="./../../assets/css/myPageNormal/normalMesseage.css">
+  <link rel="stylesheet" href="./../../assets/css/myPageNormal/normalreseiveMesseage.css">
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/myPageNormal/normalreseiveMesseage.js"></script>
 </head>
+
 <body>
   <div id="header"></div>
   <main>
@@ -19,7 +22,7 @@
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
-        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalsendMesseage.html">쪽지함</a></li>
         <li><a href="./normalPost.html">게시글 관리</a></li>
         <li><a href="./normalPoint.html">포인트 충전</a></li>
         <li><a href="./normalReference.html">1 대 1 문의</a></li>
@@ -30,10 +33,10 @@
       <div class="div_mark">
         <div class="title">쪽지함</div>
         <nav class="div_choose">
-          <ul>
-            <li><a href="">받은 쪽지</a></li>
+          <ul> 
+            <li class="send"><a href="./normalsendMesseage.html">받은 쪽지</a></li>
             <li>|</li>
-            <li><a href="">보낸 쪽지</a></li>
+            <li class="reseive"><a href="./normalreseiveMesseage.html">보낸 쪽지</a></li>
           </ul>
         </nav>
         <nav class="mark_nav">
@@ -56,72 +59,72 @@
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>보낸 사람</div>
-              </a></li>
-            <li class="messeagetitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-            <li class="read"><a href="">
-                <div>읽음 상태</div>
-              </a></li>
+            <li class="name">
+              <div>보낸 사람</div>
+            </li>
+            <li class="messeagetitle">
+              <div id="headline">제목</div>
+            </li>
+            <li class="day">
+              <div>날짜</div>
+            </li>
+            <li class="read">
+              <div>읽음 상태</div>
+            </li>
           </ul>
         </nav>
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>보낸 사람</div>
-              </a></li>
-            <li class="messeagetitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-            <li class="read"><a href="">
-                <div>읽음 상태</div>
-              </a></li>
+            <li class="name">
+              <div>보낸 사람</div>
+            </li>
+            <li class="messeagetitle">
+              <div id="headline">제목</div>
+            </li>
+            <li class="day">
+              <div>날짜</div>
+            </li>
+            <li class="read">
+              <div>읽음 상태</div>
+            </li>
           </ul>
         </nav>
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>보낸 사람</div>
-              </a></li>
-            <li class="messeagetitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-            <li class="read"><a href="">
-                <div>읽음 상태</div>
-              </a></li>
+            <li class="name">
+              <div>보낸 사람</div>
+            </li>
+            <li class="messeagetitle">
+              <div id="headline">제목</div>
+            </li>
+            <li class="day">
+              <div>날짜</div>
+            </li>
+            <li class="read">
+              <div>읽음 상태</div>
+            </li>
           </ul>
         </nav>
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>보낸 사람</div>
-              </a></li>
-            <li class="messeagetitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
-            <li class="read"><a href="">
-                <div>읽음 상태</div>
-              </a></li>
+            <li class="name">
+              <div>보낸 사람</div>
+            </li>
+            <li class="messeagetitle">
+              <div id="headline">제목</div>
+            </li>
+            <li class="day">
+              <div>날짜</div>
+            </li>
+            <li class="read">
+              <div>읽음 상태</div>
+            </li>
           </ul>
         </nav>
-        
+
         <nav class="page">
           <ul>
             <li><a href="">&lt;</a></li>
@@ -133,12 +136,34 @@
           </ul>
         </nav>
         <div class="div_delete">
-          <button>삭제</button>
+          <button id="delete">삭제</button>
         </div>
       </div>
     </form>
-  
+
   </main>
+  <div class="modal">
+    <div class="modal-content">
+      <button id="sendxbutton">X</button>
+      <p>보낸 쪽지 읽기</p>
+      <div class="sendmember">
+        <div>받는 사람 : 홍길동 | honggildong123</div>
+      </div>
+      <div class="content">
+        <div>쪽지 내용</div>
+      </div>
+      <button id="deleteBtn">삭제</button>
+    </div>
+  </div>
+  
+  <div class="modal_delete">
+    <div class="modal-checkcontent">
+      <p>쪽지가 삭제되었습니다.</p>
+      <button id="deletecheckBtn">확인</button>
+    </div>
+  </div>
+
   <div id="footer"></div>
 </body>
+
 </html>
