250810 1815 황승우 곤리자 모달 연결 직전

--- a/webapp/app/admin/sidebar.html
+++ b/webapp/app/admin/sidebar.html
@@ -1,16 +1,16 @@
   <div class="sidebar">
     <ul>
       <div class="blank"></div>
-      <a href="">
+      <a href="./../../app/admin/userManager.html">
         <li class="side_attach">회원관리</li>
       </a>
       <div class="board">
         <li class="side_attach">일반 게시글 관리</li>
         <ul class="side_menu side_normal_board">
-          <a href="#">
+          <a href="./../../app/admin/notice.html">
             <li class="side_attach">공지사항 관리</li>
           </a>
-          <a href="#">
+          <a href="./../../app/admin/report.html">
             <li class="side_attach">신고글 관리</li>
           </a>
         </ul>
@@ -19,29 +19,29 @@
       <div class="board">
         <li class="side_attach">뉴스 게시글 관리</li>
         <ul class="side_menu side_news_board">
-          <a href="#">
+          <a href="./../../app/admin/newsBoard.html">
             <li class="side_attach">뉴스 게시물</li>
           </a>
-          <a href="#">
+          <a href="./../../app/admin/bannerBoard.html">
             <li class="side_attach">배너 게시물</li>
           </a>
         </ul>
       </div>
-      <a href="">
+      <a href="./../../app/admin/refund.html">
         <li class="side_attach">돌봄회원 환급 관리</li>
       </a>
       <div class="board">
         <li class="side_attach">돌봄 회원 신청</li>
         <ul class="side_menu side_news_board">
-          <a href="#">
+          <a href="./../../app/admin/careRequest.html">
             <li class="side_attach">신청 관리</li>
           </a>
-          <a href="#">
-            <li class="side_attach">수강 관리</li>
+          <a href="./../../app/admin/careCareer.html">
+            <li class="side_attach">수정 관리</li>
           </a>
         </ul>
       </div>
-      <a href="">
+      <a href="qeustion.html">
         <li class="side_attach">1:1 문의사항</li>
       </a>
     </ul>
