--- a/webapp/app/login/findPassword.html
+++ b/webapp/app/login/findPassword.html
@@ -6,67 +6,85 @@
     <title>비밀번호 찾기</title>
     <link rel="stylesheet" href="./../../assets/css/login/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/login/findPassword.css" />
-      <link rel="stylesheet" href="./../../assets/css/header.css">
-  <link rel="stylesheet" href="./../../assets/css/footer.css">
-  <script defer src="./../../assets/js/main/include.js"></script>
+    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/footer.css" />
+    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/login/findPw.js"></script>
   </head>
   <body>
-  <div id="header"></div>
+    <div id="header"></div>
     <main>
       <section class="findId">
         <form action="" method="">
-        <div class="box">
-          <div class="box_title">
-            <p>비밀번호 찾기</p>
+          <div class="box">
+            <div class="box_title">
+              <p>비밀번호 찾기</p>
+            </div>
+            <div class="box_content">
+              <div class="box_name">
+                <p>이름</p>
+                <input type="text" placeholder="" name="name" />
+              </div>
+              <div>
+                <div class="box_id">
+                  <p>아이디</p>
+                  <input type="text" placeholder="" name="id" id="get_id" />
+                  <label for="member_normal">
+                    <input
+                      type="radio"
+                      id="member_normal"
+                      name="type"
+                      value="normal"
+                    />일반회원
+                  </label>
+                  <label for="member_care">
+                    <input
+                      type="radio"
+                      id="member_care"
+                      name="type"
+                      value="care"
+                    />돌봄회원
+                  </label>
+                  <button class="check_id_btn" onclick="checkId()">
+                    아이디 확인
+                  </button>
+                </div>
+                <div class="check_id">
+                  <p class="correct_id">아이디가 제대로 확인되었습니다.</p>
+                  <p class="error_id">아이디가 존재하지 않습니다.</p>
+                </div>
+              </div>
+              <div class="box_phone">
+                <p>휴대전화</p>
+                <input type="text" placeholder="-없이 숫자만 입력해주세요" />
+                <button onclick="sendMsg()">인증번호 받기</button>
+                <div class="alert">인증번호가 발송되었습니다.</div>
+              </div>
+              <div>
+                <div class="box_author">
+                  <input
+                    type="text"
+                    placeholder="인증번호 6자리 입력"
+                    class="input_number"
+                    id="author_number"
+                  />
+                  <div class="timer"></div>
+                  <button onclick="checkMsg()">인증번호 확인</button>
+                </div>
+                <div class="error_box_msg">
+                  <p class="error_msg">인증번호가 올바르지 않습니다.</p>
+                  <p class="okay_msg">제대로 인증되었습니다.</p>
+                </div>
+              </div>
+              <div class="box_next">
+                <button>다음</button>
+              </div>
+            </div>
           </div>
-          <div class="box_content">
-            <div class="box_name">
-              <p>이름</p>
-              <input type="text" placeholder="" name="name" />
-            </div>
-            <div class="box_id">
-              <p>아이디</p>
-              <input type="text" placeholder="" name="id" />
-              <label for="member_normal">
-                <input
-                  type="radio"
-                  id="member_normal"
-                  name="type"
-                  value="normal"
-                />일반회원
-              </label>
-              <label for="member_care">
-                <input
-                  type="radio"
-                  id="member_care"
-                  name="type"
-                  value="care"
-                />돌봄회원
-              </label>
-            </div>
-            <div class="box_phone">
-              <p>휴대전화</p>
-              <input type="text" placeholder="-없이 숫자만 입력해주세요" />
-              <button>인증번호 받기</button>
-            </div>
-            <div class="box_author">
-              <input
-                type="text"
-                placeholder="인증번호 6자리 입력"
-                class="input_number"
-              />
-              <input type="text" placeholder="01:00" readonly class="timer" />
-              <button>인증번호 확인</button>
-            </div>
-            <div class="box_next">
-              <button>다음</button>
-            </div>
-          </div>
-        </div>
         </form>
       </section>
     </main>
 
-  <div id="footer"></div>
+    <div id="footer"></div>
   </body>
 </html>
