--- a/webapp/app/sign/signNormal.html
+++ b/webapp/app/sign/signNormal.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/sign/signNormalCare.js"></script>
 </head>
 <body>
   <div id="header"></div>
@@ -18,22 +19,38 @@
         <div class="sign_box sign_title">
           <p>회원가입</p>
         </div>
-        <div class="sign_box sign_id">
-          <p>아이디</p>
-          <input type="text" placeholder="8자리 이상, 문자 숫자 포함">
-          <button>중복확인</button>
-        </div>
+          <div class="sign_box sign_id">
+            <p>아이디</p>
+            <input type="text" placeholder="8자리 이상, 문자 숫자 포함" id="get_id">
+            <button onclick="checkId()">중복확인</button>
+          </div>
+          <div class="id_err_box">
+            <p class="err_id_msg">중복된 아이디 입니다.</p>
+            <p class="ok_id_msg">사용가능한 아이디 입니다.</p>
+          </div>
+
         <div class="sign_box sign_password">
           <p>비밀번호</p>
-          <input type="password" placeholder="비밀번호 8자리 입력(숫자와 영어 특수기호 포함)">
+          <input type="password" placeholder="비밀번호 8자리 입력(숫자와 영어 특수기호 포함)" id="pw_input">
+        </div>
+        <div class="box_error_pw" id="msg_box">
+          <p class="error_pw_msg">형식에 맞게 입력해주세요.</p>
         </div>
         <div class="sign_box password_check">
           <p>비밀번호 확인</p>
-          <input type="password" >
+          <input type="password" id="pw_check_input" >
         </div>
+        <div class="box_re_error" id="msg_box2">
+          <p class="correct_pw">비밀번호가 일치합니다.</p>
+          <p class="error_pw_check_msg">비밀번호가 일치하지않습니다.</p>
+        </div>
+      </div>
         <div class="sign_box sign_email">
           <p>이메일</p>
-          <input type="text">
+          <input type="text" id="email">
+        </div>
+        <div class="box_error_email" id="msg_box_email">
+          <p class="error_email_msg">이메일형식에 맞지 않습니다.</p>
         </div>
         <div class="sign_box sign_name">
           <p>이름</p>
