--- a/webapp/app/myPageCare/carePostRe.html
+++ b/webapp/app/myPageCare/carePostRe.html
@@ -28,8 +28,9 @@
       </div>
 
       <div class="tools">
-        <!-- 이거 어케 할지 질문 -->
+        <textarea name="" id=""></textarea>
       </div>
+      
       <div class="re_post_content">
         <textarea id="contentInput" placeholder="내용을 입력하세요"></textarea>
       </div>
