--- a/webapp/app/myPageCare/careProfile.html
+++ b/webapp/app/myPageCare/careProfile.html
@@ -36,7 +36,7 @@
       <div class="main_container">
         <ul class="profile_section">
           <img src="./../../assets/img/myPageCare/peple.jpg" alt="사람사진">
-          <button>파일 선택</button>
+          <input type="file">파일 선택
           <button>확인</button>
         </ul>
 
@@ -71,7 +71,8 @@
                   </li>
                   <li>
                     <label class="license" for="experience"> 주요 이력 </label>
-                    <input type="file" id="experience" placeholder="이력">
+                    <input type="text" id="experience" placeholder="이력">
+                    <button class="confrim">확인</button>
                   </li>
                 </ul>
               </div>
@@ -117,7 +118,7 @@
     </div>
   </main>
 
-  <!-- <div id="uploadSuccessModal" class="modal">
+  <div id="uploadSuccessModal" class="modal">
     <div class="modal-content">
       <p>파일이 업로드 되었습니다.</p>
       <button id="uploadConfirmBtn" onclick="closeuploadSuccessModal()">확인</button>
@@ -129,14 +130,14 @@
       <p>정보가 저장되었습니다.</p>
       <button id="saveConfirmBtn">확인</button>
     </div>
-  </div> -->
-<!-- 
+  </div> 
+
   <div id="proposeSuccessModal" class="modal">
     <div class="modal-content">
       <p>이력 수정 신청이 완료되었습니다.</p>
       <button id="saveConfirmBtn">확인</button>
     </div>
-  </div> -->
+  </div>
   <div id="footer"></div>
 
 
