--- a/webapp/app/myPageCare/carePwCheck.html
+++ b/webapp/app/myPageCare/carePwCheck.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/carePwCheck.css">
+  <script defer src="./../../assets/js/myPageCare/carePwCheck.js"></script>
 </head>
 <body>
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-  <div></div>
   <ul>
         <li><a href="./careProfile.html"><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a></li>
         <li><a href="./careModify.html">개인정보 수정</a></li>
