--- a/webapp/app/myPageCare/careReferenceDP.html
+++ b/webapp/app/myPageCare/careReferenceDP.html
@@ -35,7 +35,9 @@
 
       </div>
       <div class="tools">
-        <!-- 이거 어케 할지 질문 -->
+
+        <textarea name="" id=""></textarea>
+      
       </div>
       <div class="reference_info">
         <span>등록자명 : 아무개</span>
