250810 22:01 장성주 html, css, js 연결까지 완료

--- a/webapp/app/myPageCare/careMessage.html
+++ b/webapp/app/myPageCare/careMessage.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./../../assets/css/header.css">
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
+  <script defer src="./../../assets/js/myPageCare/careMessage.js"></script>
 </head>
 
 <body>
@@ -136,7 +137,7 @@
 
       </nav>
       <div class="div_delete">
-        <button>삭제</button>
+        <button class="btn_list_delete">삭제</button>
       </div>
     </div>
   </main>
@@ -162,7 +163,7 @@
     </div>
   </div>
 
-  <!-- <div class="modal_bg" id="sendMsgModal">
+  <div class="modal_bg" id="sendMsgModal">
   <div class="modal_box">
     <div class="modal_read">
       <span class="modal_title">쪽지 보내기</span>
@@ -170,7 +171,7 @@
     </div>
     <div class="modal_info">
       <div class="sender_info">
-        <span>받는 사람 : </span>강버들 | <span class="sender_id">kangbudle01</span>
+        <span>받는 사람 : </span>스태고사우루스 | <span class="sender_id">stago</span>
       </div>
       <textarea class="message_textarea" placeholder="내용을 입력하세요"></textarea>
     </div>
@@ -179,18 +180,18 @@
       <button class="btn_cancel">취소</button>
     </div>
   </div>
-</div> -->
+</div>
 
-  <!-- <div class="modal_bg" id="sendSuccessModal">
+  <div class="modal_bg" id="sendSuccessModal">
     <div class="modal_box modal_send">
       <p class="send_message">쪽지를 보냈습니다.</p>
       <div class="modal_button">
         <button class="btn_confirm" onclick="closeSendModal()">확인</button>
       </div>
     </div>
-  </div> -->
+  </div>
 
-  <!-- <div class="modal_bg" id="deleteMsgModal">
+  <div class="modal_bg" id="deleteMsgModal">
   <div class="modal_box confirm_modal">
     <p class="confirm_text">정말로 쪽지를 삭제하시겠습니까?</p>
     <div class="confirm_buttons">
@@ -198,17 +199,17 @@
       <button class="btn_cancel" onclick="closeDeleteModal()">취소</button>
     </div>
   </div>
-</div> -->
+</div>
 
-  <!-- <div class="modal_bg" id="sendSuccessModal">
+  <div class="modal_bg" id="sendSuccessModal">
     <div class="modal_box modal_send">
       <p class="send_message">쪽지가 삭제되었습니다.</p>
       <div class="modal_button">
         <button class="btn_confirm" onclick="closeSendModal()">확인</button>
       </div>
     </div>
-  </div> -->
-  <!-- <div class="modal_bg" id="sentMsgReadModal">
+  </div> 
+  <div class="modal_bg" id="sentMsgReadModal">
     <div class="modal_box read_modal">
       <div class="modal_header">
         <span class="modal_title">보낸 쪽지 읽기</span>
@@ -226,7 +227,7 @@
         <button class="btn_delete">삭제</button>
       </div>
     </div>
-  </div> -->
+  </div>
 
 
   <div id="footer"></div>
