--- a/webapp/app/myPageCare/careExit.html
+++ b/webapp/app/myPageCare/careExit.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./../../assets/css/footer.css">
   <script defer src="./../../assets/js/main/include.js"></script>
   <link rel="stylesheet" href="./../../assets/css/myPageCare/careExit.css">
+  <script defer src="./../../assets/js/myPageCare/careExit.js"></script>
 </head>
 
 <body>
@@ -58,38 +59,42 @@
       </div>
 
       <div class="exit-button-area">
-        <button class="exit-button">다음</button>
-        <div class="modal" id="modalConfirm">
-          <div class="modal-content">
-            <p>정말로 회원 탈퇴를 진행하시겠습니까?<br><span class="red">※ 탈퇴는 되돌릴 수 없습니다.</span></p>
-            <div class="modal-buttons">
-              <button class="btn" onclick="closeModal('modalConfirm')">취소</button>
-              <button class="btn blue" onclick="checkWithdrawal()">확인</button>
-            </div>
+        <button class="exit-button" type="button">다음</button>
+        <p id="reasonError" class="error-text">탈퇴사유를 꼭 입력해주세요</p>
+      </div>
+
+
+      <div class="modal" id="modalConfirm" aria-hidden="true">
+        <div class="modal-content">
+          <p>정말로 회원 탈퇴를 진행하시겠습니까?<br><span class="red">※ 탈퇴는 되돌릴 수 없습니다.</span></p>
+          <div class="modal-buttons">
+            <button class="btn" onclick="closeModal('modalConfirm')">취소</button>
+            <button class="btn blue" onclick="checkWithdrawal()">확인</button>
           </div>
         </div>
+      </div>
 
-        <div class="modal" id="modalFail">
-          <div class="modal-content">
-            <p>예약된 거동 불편자가 있어 회원 탈퇴가 불가합니다.</p>
-            <div class="modal-buttons">
-              <button class="btn" onclick="closeModal('modalFail')">취소</button>
-              <button class="btn blue" onclick="closeModal('modalFail')">확인</button>
-            </div>
+      <div class="modal" id="modalFail" aria-hidden="true">
+        <div class="modal-content">
+          <p>예약된 거동 불편자가 있어 회원 탈퇴가 불가합니다.</p>
+          <div class="modal-buttons">
+            <button class="btn" onclick="closeModal('modalFail')">취소</button>
+            <button class="btn blue" onclick="closeModal('modalFail')">확인</button>
           </div>
         </div>
+      </div>
 
-        <div class="modal" id="modalSuccess">
-          <div class="modal-content">
-            <p>성공적으로 회원을 탈퇴 하셨습니다.</p>
-            <div class="modal-buttons">
-              <button class="btn blue" onclick="closeModal('modalSuccess')">확인</button>
-            </div>
+      <div class="modal" id="modalSuccess" aria-hidden="true">
+        <div class="modal-content">
+          <p>성공적으로 회원을 탈퇴 하셨습니다.</p>
+          <div class="modal-buttons">
+            <button class="btn blue" onclick="closeModal('modalSuccess')">확인</button>
           </div>
         </div>
       </div>
     </section>
   </main>
+
   <div id="footer"></div>
 </body>
 
