250810 23:12 모달만드는 중

--- a/webapp/app/myPageNormal/normalMark.html
+++ b/webapp/app/myPageNormal/normalMark.html
@@ -19,7 +19,7 @@
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
-        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalsendMesseage.html">쪽지함</a></li>
         <li><a href="./normalPost.html">게시글 관리</a></li>
         <li><a href="./normalPoint.html">포인트 충전</a></li>
         <li><a href="./normalReference.html">1 대 1 문의</a></li>
@@ -44,7 +44,21 @@
               <div>이름</div>
             </li>
             <li class="location">
-              <div>위치</div>
+              <div><a href="./../restaurant/restaurantDetail.html">위치</a></div>
+            </li>
+            <li class="phone">
+              <div>전화번호</div>
+            </li>
+          </ul>
+        </nav>
+        <nav class="mark_list">
+          <ul> 
+            <li><input type="checkbox"></li>
+            <li class="name">
+              <div>이름</div>
+            </li>
+            <li class="location">
+              <div><a href="./../restaurant/restaurantDetail.html">위치</a></div>
             </li>
             <li class="phone">
               <div>전화번호</div>
@@ -58,7 +72,7 @@
               <div>이름</div>
             </li>
             <li class="location">
-              <div>위치</div>
+              <div><a href="./../restaurant/restaurantDetail.html">위치</a></div>
             </li>
             <li class="phone">
               <div>전화번호</div>
@@ -72,21 +86,7 @@
               <div>이름</div>
             </li>
             <li class="location">
-              <div>위치</div>
-            </li>
-            <li class="phone">
-              <div>전화번호</div>
-            </li>
-          </ul>
-        </nav>
-        <nav class="mark_list">
-          <ul>
-            <li><input type="checkbox"></li>
-            <li class="name">
-              <div>이름</div>
-            </li>
-            <li class="location">
-              <div>위치</div>
+              <div><a href="./../restaurant/restaurantDetail.html">위치</a></div>
             </li>
             <li class="phone">
               <div>전화번호</div>
