--- a/webapp/app/myPageNormal/normalPoint.html
+++ b/webapp/app/myPageNormal/normalPoint.html
@@ -23,7 +23,7 @@
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
-        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalsendMesseage.html">쪽지함</a></li>
         <li><a href="./normalPost.html">게시글 관리</a></li>
         <li><a href="./normalPoint.html">포인트 충전</a></li> 
         <li><a href="./normalReference.html">1 대 1 문의</a></li>
@@ -42,7 +42,7 @@
           </ul>
         </nav>
       </div>
-      <form action="" method="get">
+      <form action="" method="get"> 
         <div class="point_have">
           <div class="point_have_title">포인트 잔액</div>
           <div class="point_point">10000 포인트</div>
@@ -113,9 +113,9 @@
     <div class="modal_history">
       <div class="modal-content">
         <p>포인트 충전 내역</p>
-        <div class="payapi">
+        <div class="charge_history">
           <div>
-            <nav>
+            <nav class="charge_month">
               <ul>
                 <li><button>&lt;</button></li>
                 <li><div>8월</div></li>
@@ -124,8 +124,11 @@
             </nav>
           </div>
           <div>
-            <nav>
+            <nav class="charge_day">
               <ul>
+                <li>2일 : 100,000</li>
+                <li>2일 : 100,000</li>
+                <li>2일 : 100,000</li>
                 <li>2일 : 100,000</li>
               </ul>
             </nav>
