--- a/webapp/app/myPageNormal/normalPost.html
+++ b/webapp/app/myPageNormal/normalPost.html
@@ -19,7 +19,7 @@
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
-        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalsendMesseage.html">쪽지함</a></li>
         <li><a href="./normalPost.html">게시글 관리</a></li>
         <li><a href="./normalPoint.html">포인트 충전</a></li>
         <li><a href="./normalReference.html">1 대 1 문의</a></li>
@@ -51,59 +51,60 @@
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
+            <li class="name">
+              <div>작성자</div>
+            </li>
+            <li class="posttitle"><a href="./../post/postDetail.html">
+              <div>제목</div>
               </a></li>
-            <li class="posttitle"><a href="">
-                <div>제목</div>
-              </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
+            <li class="day">
+              <div>날짜</div>
+            </li>
           </ul>
         </nav>
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
-              </a></li>
-            <li class="posttitle"><a href="">
+            <li class="name">
+              <div>작성자</div>
+            </li>
+            <li class="posttitle"><a href="./../post/postDetail.html">
                 <div>제목</div>
               </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
+            <li class="day">
+              <div>날짜</div>
+            </li>
           </ul>
         </nav>
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
-              </a></li>
-            <li class="posttitle"><a href="">
+            <li class="name">
+              <div>작성자</div>
+            </li>
+            <li class="posttitle"><a href="./../post/postDetail.html">
                 <div>제목</div>
               </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
+            <li class="day">
+              <div>날짜</div>
+            </li>
           </ul>
         </nav>
         <nav class="mark_list">
           <ul>
             <li><input type="checkbox"></li>
-            <li class="name"><a href="">
-                <div>작성자</div>
-              </a></li>
-            <li class="posttitle"><a href="">
+            <li class="name">
+              <div>작성자</div>
+            </li>
+            <li class="posttitle"><a href="./../post/postDetail.html">
                 <div>제목</div>
               </a></li>
-            <li class="day"><a href="">
-                <div>날짜</div>
-              </a></li>
+            <li class="day">
+              <div>날짜</div>
+            </li>
           </ul>
         </nav>
+
 
         <nav class="page">
           <ul>
@@ -124,4 +125,4 @@
   </main>
   <div id="footer"></div>
 </body>
-</html>
+</html> 
