--- a/webapp/app/myPageNormal/normalPwCheck.html
+++ b/webapp/app/myPageNormal/normalPwCheck.html
@@ -20,7 +20,7 @@
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
-        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalsendMesseage.html">쪽지함</a></li>
         <li><a href="./normalPost.html">게시글 관리</a></li>
         <li><a href="./normalPoint.html">포인트 충전</a></li>
         <li><a href="./normalReference.html">1 대 1 문의</a></li>
@@ -30,9 +30,9 @@
     <div class="pw_check">
       <form action="" method="get"> 
         비밀번호<input type="password" placeholder="비밀번호 8자리 입력">
-        <button>비밀번호 확인</button>
-        <div id="pwaccord">일치하지 않는 비밀번호 입니다</div>
       </form>
+      <button class="checkBtn">비밀번호 확인</button>
+      <div id="pwaccord">일치하지 않는 비밀번호 입니다</div>
     </div>
   </main>
   <div id="footer"></div>
