--- a/webapp/app/myPageNormal/normalQuit.html
+++ b/webapp/app/myPageNormal/normalQuit.html
@@ -22,7 +22,7 @@
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
-        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalsendMesseage.html">쪽지함</a></li>
         <li><a href="./normalPost.html">게시글 관리</a></li>
         <li><a href="./normalPoint.html">포인트 충전</a></li>
         <li><a href="./normalReference.html">1 대 1 문의</a></li>
