--- a/webapp/app/myPageNormal/normalReference.html
+++ b/webapp/app/myPageNormal/normalReference.html
@@ -19,7 +19,7 @@
         <li><a href="./normalMark.html">찜한 목록</a></li>
         <li><a href="./normalheart.html">하트 목록</a></li>
         <li><a href="./normalMatching.html">매칭 기록</a></li>
-        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalsendMesseage.html">쪽지함</a></li>
         <li><a href="./normalPost.html">게시글 관리</a></li>
         <li><a href="./normalPoint.html">포인트 충전</a></li>
         <li><a href="./normalReference.html">1 대 1 문의</a></li>
@@ -56,7 +56,7 @@
               <div>작성자</div>
             </li>
             <li class="referencetitle">
-              <div>제목</div>
+              <a href="./normalReferenceDetail.html"><div>제목</div></a>
             </li>
             <li class="day">
               <div>신청 날짜</div>
@@ -72,7 +72,7 @@
               <div>작성자</div>
             </li>
             <li class="referencetitle">
-              <div>제목</div>
+              <a href="./normalReferenceDetail.html"><div>제목</div></a>
             </li>
             <li class="day">
               <div>신청 날짜</div>
@@ -88,7 +88,7 @@
               <div>작성자</div>
             </li>
             <li class="referencetitle">
-              <div>제목</div>
+              <a href="./normalReferenceDetail.html"><div>제목</div></a>
             </li>
             <li class="day">
               <div>신청 날짜</div>
@@ -104,7 +104,7 @@
               <div>작성자</div>
             </li>
             <li class="referencetitle">
-              <div>제목</div>
+              <a href="./normalReferenceDetail.html"><div>제목</div></a>
             </li>
             <li class="day">
               <div>신청 날짜</div>
@@ -126,7 +126,7 @@
           </ul>
         </nav>
         <div class="div_delete">
-          <button>등록</button>
+          <button><a href="./normalReferenceUp.html">등록</a></button>
         </div>
       </div>
     </form>
