--- a/webapp/app/myPageNormal/normalQuit.html
+++ b/webapp/app/myPageNormal/normalQuit.html
@@ -42,22 +42,46 @@
         </nav>
       </div>
       <form action="" method="get">
-        <div class="quit_box">
-          <div class="quit_day">
-            <div class="quit_text">탈퇴 날짜</div>
-            <div class="quit_today">2025-08-08</div>
+        <div class="exit-box">
+          <div class="exit-row">
+            <div class="exit-label">탈퇴 날짜</div>
+            <div class="exit-value">2025 - 08 - 03</div>
           </div>
-          <div class="quit_reason">
-            <div class="quit_text">탈퇴 사유</div>
-            <div>
-              <input placeholder="탈퇴 사유를 입력하여 주십시오">
+          <div class="exit-row">
+            <div class="exit-label">탈퇴 사유</div>
+            <div class="exit-value">
+              <select class="exit-select">
+                <option disabled selected>탈퇴 사유를 입력하여 주십시오.</option>
+                <option>서비스 이용 불편</option>
+                <option>개인정보 우려</option>
+                <option>재가입 예정 없음</option>
+                <option>기타</option>
+              </select>
             </div>
           </div>
         </div>
-        <button>다음</button>
+        <button id="next">다음</button>
       </form>
     </div>
   </main>
+  <div class="checkmodal" id="editModal">
+    <div class="modal_box">
+      <p>정말로 회원 탈퇴를 진행하시겠습니까?</p>
+      <p>※미사용 포인트는 소멸됩니다</p>
+      <div class="modal_buttons">
+        <button id="check">확인</button>
+        <button id="cancle">취소</button>
+      </div>
+    </div>
+  </div>
+  <div class="modal" id="editModal">
+    <div class="modal_box">
+      <p>성공적으로 회원을 탈퇴 하셨습니다.</p>
+      <div class="modal_buttons">
+        <a href="./../../main.html"><button id="check">확인</button></a>
+      </div>
+    </div>
+  </div>
   <div id="footer"></div>
 </body>
 
