--- a/webapp/app/modal/modalDeleteNewsFinished.html
+++ b/webapp/app/modal/modalDeleteNewsFinished.html
@@ -1,14 +1,14 @@
-<div class="modal">
+<div id="modal">
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="turnOffModal()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
+        <img onclick="modalDeleteNewsFinishedNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         (-)
       </p>
       <div class="modal_button_box">
-        <button onclick="modalCheck()" class="modal_check_button">
+        <button onclick="modalDeleteNewsFinishedCheck()" class="modal_check_button">
           확인
         </button>
       </div>
