--- a/webapp/app/modal/modalDeleteNotice.html
+++ b/webapp/app/modal/modalDeleteNotice.html
@@ -1,17 +1,17 @@
-<div class="modal">
+<div id="modal">
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="turnOffModal()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
+        <img onclick="modalDeleteNoticeNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         이 공지사항을 삭제하시겠습니까?
       </p>
       <div class="modal_button_box">
-        <button onclick="modalCheck()" class="modal_check_button">
+        <button onclick="modalDeleteNoticeCheck()" class="modal_check_button">
           확인
         </button>
-        <button onclick="modalCancel()" class="modal_cancel_button">
+        <button onclick="modalDeleteNoticeCancel()" class="modal_cancel_button">
           취소
         </button>
       </div>
