--- a/webapp/app/modal/modalDeletePostReason.html
+++ b/webapp/app/modal/modalDeletePostReason.html
@@ -1,8 +1,8 @@
-<div class="modal">
+<div id="modal">
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="turnOffModal()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
+        <img onclick="modalDeletePostReasonNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         삭제 사유
@@ -13,10 +13,10 @@
         <option value="2">광고성 게시물입니다.</option>
       </select>
       <div class="modal_button_box">
-        <button onclick="modalCheck()" class="modal_check_button">
+        <button onclick="modalDeletePostReasonCheck()" class="modal_check_button">
           확인
         </button>
-        <button onclick="modalCancel()" class="modal_cancel_button">
+        <button onclick="modalDeletePostReasonCancel()" class="modal_cancel_button">
           취소
         </button>
       </div>
