--- a/webapp/app/modal/modalPointRefundLog.html
+++ b/webapp/app/modal/modalPointRefundLog.html
@@ -1,8 +1,8 @@
-<div class="modal">
+<div id="modal">
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="turnOffModal()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
+        <img onclick="modalPointRefundLogNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         포인트 환급 내역
@@ -42,10 +42,10 @@
         </ul>
       </div>
       <div class="modal_button_box">
-        <button onclick="modalCheck()" class="modal_check_button">
+        <button onclick="modalPointRefundLogCheck()" class="modal_check_button">
           확인
         </button>
-        <button onclick="modalCancel()" class="modal_cancel_button">
+        <button onclick="modalPointRefundLogCancel()" class="modal_cancel_button">
           취소
         </button>
       </div>
