--- a/webapp/app/modal/modalRefundFinished.html
+++ b/webapp/app/modal/modalRefundFinished.html
@@ -1,14 +1,14 @@
-<div class="modal">
+<div id="modal">
   <div class="modal_window">
     <div class="modal_body_confirm">
       <div class="modal_x_box">
-        <img onclick="turnOffModal()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
+        <img onclick="modalRefundFinishedNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
       <p id="modal_text">
         환급 완료
       </p>
       <div class="modal_button_box">
-        <button onclick="modalCheck()" class="modal_check_button">
+        <button onclick="modalRefundFinishedCheck()" class="modal_check_button">
           확인
         </button>
       </div>
