--- a/webapp/main.html
+++ b/webapp/main.html
@@ -9,9 +9,15 @@
   <link rel="stylesheet" href="./assets/css/footer.css">
   <script defer src="./assets/js/main/main.js"></script>
   <script defer src="./assets/js/main/include.js"></script>
+
+  <link rel="stylesheet" href="./assets/css/modalAdmin.css">
+  <script defer src="./assets/js/modal/modalRefundFinished.js"></script>
+  <script defer src="./assets/js/modal/modalRefundFinished.js"></script>
 </head>
 <body>
   <div id="header"></div>
+  <div id="d" onclick="modalRefundFinishedShow()"> 답변완료</div>
+  <div id="d" onclick="modalRefundFinishedShow()"> 변경중</div>
   <main>
     <div class="main_body">
       <div class="news_banner">
@@ -281,5 +287,7 @@
   </main>
   <div id="footer"></div>
   <!-- 메인 -->
+   <div id="modalRefundFinished"></div>
+   <div id="modalRefundFinished"></div>
 </body>
 </html> 
